--- a/nootbooks/sparkR.ipynb
+++ b/nootbooks/sparkR.ipynb
@@ -33,7 +33,7 @@
     }
    ],
    "source": [
-    "Sys.setenv(SPARK_HOME=\"/usr/lib/spark\")\n",
+    "#Sys.setenv(SPARK_HOME=\"/usr/lib/spark\") #use this based on your environment\n",
     ".libPaths(c(file.path(Sys.getenv(\"SPARK_HOME\"), \"R\", \"lib\"), .libPaths()))\n",
     "library(SparkR)\n",
     "sc <- sparkR.init(master=\"local\")"
