--- a/nootbooks/sparkR.ipynb
+++ b/nootbooks/sparkR.ipynb
@@ -11,14 +11,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Warning message:\n",
+      ": package 'SparkR' was built under R version 3.1.3\n",
+      "Attaching package: 'SparkR'\n",
       "\n",
-      "Attaching package: ‘SparkR’\n",
-      "\n",
-      "The following object is masked from ‘package:stats’:\n",
+      "The following object is masked from 'package:stats':\n",
       "\n",
       "    filter\n",
       "\n",
-      "The following objects are masked from ‘package:base’:\n",
+      "The following objects are masked from 'package:base':\n",
       "\n",
       "    intersect, sample, table\n",
       "\n"
@@ -28,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Launching java with spark-submit command /usr/lib/spark/bin/spark-submit   sparkr-shell /tmp/RtmpZsAVC6/backend_port2938207d2d6 \n"
+      "Launching java with spark-submit command /usr/local/spark/bin/spark-submit   sparkr-shell /tmp/RtmpMPbwib/backend_port4715aec07f \n"
      ]
     }
    ],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +64,7 @@
        "DataFrame[mpg:double, cyl:double, disp:double, hp:double, drat:double, wt:double, qsec:double, vs:double, am:double, gear:double, carb:double]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -126,12 +127,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Column cyl \n"
+      "Column cyl DESC \n"
      ]
     }
    ],
    "source": [
-    "show(descrmtcars_df$cyl)"
+    "show(desc(mtcars_df$cyl))"
    ]
   }
  ],
